@@ -1,10 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.20 2005/01/04 22:45:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.21 2005/01/05 07:22:20 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
   
-  04 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  05 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Change all the math in Partitioning.py to work with sectors instead of
+  cylinders.
+
+  04 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   A few tweaks to make it "work" with the GLIStorageDevice changes.
 
   21 Dec 2004; John Laliberte <allanonl@bu.edu>
