@@ -1,10 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.19 2005/01/04 23:29:07 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.20 2005/01/05 07:22:19 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
-  04 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  05 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added get_num_sectors() to GLIStorageDevice.
+
+  04 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   GLIStorageDevice now tracks partition boundaries in sectors instead of cylinders.
   Also now ignores <=100 sectors for free space. Removed remaining depends stuff
   from GLIInstallProfile.
